--- a/client/src/components/atomic/templates/categoryList/CategoryList.css
+++ b/client/src/components/atomic/templates/categoryList/CategoryList.css
@@ -1,34 +1,123 @@
-.category-list-block{
+.category-list-block {
     width: 450px;
     height: max-content;
     background-color: white;
     margin-left: 100px;
 }
 
-.category-list-ul{
+.category-list-ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
 
-.category-list{
+.category-list {
     padding: 40px;
 }
 
-.category-list h3{
+.category-list h3 {
     margin: 0;
 }
 
-.categories{
+.categories {
     margin-top: 24px;
 }
 
-.name-category{
+.name-category {
     margin-top: 12px;
 }
 
+.category-list h3{
+    font-size: 27px;
+}
+
+.overlay {
+    display: none;
+}
+
+.overlay {
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s, visibility 0.3s;
+}
+
+.overlay.visible {
+    opacity: 1;
+    visibility: visible;
+}
+
+.category-list-ul a .name-category div {
+    font-family: 'Helvetica Neue Cyr Thin';
+    font-size: 27px;
+}
+
+.category-list-block {
+    position: relative;
+    z-index: 1001;
+    /* Контент поверх оверлея */
+}
+
+.category-list-close {
+    position: absolute;
+    top: 10px;
+    right: 13px;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+
 @media (max-width:768px) {
-    .category-list-block{
+
+    .category-list h3{
+        font-size: 14px;
+    }
+
+    .category-list-ul a .name-category div {
+        font-family: 'Helvetica Neue Cyr Thin';
+        font-size: 14px;
+    }
+
+    .category-list-block {
         margin-left: 0;
+    }
+
+    .overlay {
+        display: block;
+        position: fixed;
+        top: 80px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s, visibility 0.3s;
+    }
+
+    .overlay.visible {
+        opacity: 1;
+        visibility: visible;
+    }
+
+
+
+
+    .category-list {
+        position: fixed;
+        background-color: white;
+        z-index: 1000;
+        width: 65%;
+        height: 100%;
+        padding-top: 18px;
+        padding-left: 15px;
+        font-size: 14px;
     }
 }
