--- a/client/src/common/Modal.css
+++ b/client/src/common/Modal.css
@@ -38,7 +38,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 20px;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: auto;
   }
 }
