--- a/client/src/components/atomic/atoms/ClientLoginForm/ClientLoginForm.css
+++ b/client/src/components/atomic/atoms/ClientLoginForm/ClientLoginForm.css
@@ -25,7 +25,7 @@
     cursor: pointer;
 }
 
-.login-button:hover{
+.login-button:hover {
     background-color: black;
     color: white;
 }
@@ -36,19 +36,28 @@
     color: white;
 }
 
-.login-button:first-child:hover{
+.login-button:first-child:hover {
     background-color: white;
     color: black;
     border: 2px solid;
 }
 
 @media (max-width:768px) {
-    .login-input{
+    .login-input {
         height: 40px;
         font-size: 16px;
+        margin-top: 9px;
     }
-    .login-button{
+
+    .login-button {
         padding: 14px 14px 14px 14px;
         font-size: 14px;
+        border: 2px solid;
+        background-color: white;
+        color: black;
+    }
+
+    .login-button:first-child {
+        margin-top: 60px;
     }
 }
