--- a/client/src/components/atomic/atoms/atomsProduct/Image/Image.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Image/Image.css
@@ -13,7 +13,7 @@
     width: max-content;
 }
 
-@media (max-width: 1310px) {
+@media (max-width: 1360px) {
     .product-image.main-page img {
         width: 320px;
         height: 370px;
@@ -23,6 +23,7 @@
     .product-image.main-page {
         display: flex;
         justify-content: center;
+        width: 100%;
     }
 }
 
@@ -52,15 +53,15 @@
 
 @media (max-width: 768px) {
     .product-image.main-page img {
-        width: 150px;
-        height: 175px;
+        width: 100%;
+        height: 200px;
     }
     .product-item{
         width: 150px;
     }
 
     .product-image img{
-        width: 150px;
-        height: 175px;
+        width: 100%;
+        height: 200px;
     }
 }
