--- a/client/src/components/atomic/molecules/UserProfileMenu/UserProfileMenu.css
+++ b/client/src/components/atomic/molecules/UserProfileMenu/UserProfileMenu.css
@@ -6,12 +6,10 @@
 
 .mobile-menu {
     width: 100%;
-    border-top: 1px solid #ddd;
     background-color: #fff;
   }
   
   .menu-item {
-    border-bottom: 1px solid #ddd;
   }
   
   .menu-header {
@@ -44,7 +42,7 @@
     background: none;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 15%;
   }
   
   .tab-button.active {
@@ -70,4 +68,10 @@
         max-width: calc(1920px + 510px);
         padding: 0 355px !important;
     }
+}
+
+@media (max-width:768px) {
+  .tab-button{
+    width: 100%;
+  }
 }
