--- a/client/src/components/atomic/organisms/ClientRegistrationForm/ClientRegistrationForm.css
+++ b/client/src/components/atomic/organisms/ClientRegistrationForm/ClientRegistrationForm.css
@@ -1,17 +1,54 @@
-.login-form-head{
+.login-form-head {
     font-size: 27px;
     margin-bottom: 60px;
 }
 
-.login-form-modal .modal-overlay .modal-content{
+.login-form-modal .modal-overlay .modal-content {
     padding: 60px;
 }
 
-.login-form-btns:first-child{
+.login-form-btns:first-child {
     background-color: black;
     color: white;
 }
 
-.login-form-info{
+.login-form-info {
     margin-top: 60px;
+}
+
+@media (max-width:768px) {
+    .reg-form-modal .modal-content {
+        width: 90%;
+        padding: 30px;
+    }
+}
+
+@media (min-height:840px) and (max-height:940px) {
+    .reg-form-modal .modal-content {
+        height: auto;
+    }
+
+    .login-form-modal .modal-overlay .modal-content {
+        height: auto;
+    }
+}
+
+@media (min-height:740px) and (max-height:840px) {
+    .reg-form-modal .modal-content {
+        height: auto;
+    }
+
+    .login-form-modal .modal-overlay .modal-content {
+        height: auto;
+    }
+}
+
+@media (min-height:740px) and (max-height:840px) {
+    .reg-form-modal .modal-content {
+        height:auto;
+    }
+
+    .login-form-modal .modal-overlay .modal-content {
+        height: auto;
+    }
 }
