--- a/client/src/components/atomic/organisms/productItem/ProductItem.css
+++ b/client/src/components/atomic/organisms/productItem/ProductItem.css
@@ -95,6 +95,12 @@
     margin-right: 20px;
 }
 
+.size-error {
+    color: red;
+    font-size: 14px;
+    margin-top: 8px;
+  }
+  
 
 
 @media (max-width:1490px) {
@@ -114,6 +120,25 @@
 @media (max-width: 768px) {
 
     .product-page-container{
+        position: relative;
+    }
+    .product-page-container .product-item{
+        position: unset;
+    }
+    
+    .product-page-container .heart-container{
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        
+    }
+
+    .product-page-container .heart-container img{
+        width: 24px;
+        height: 24px;
+    }
+
+    .product-page-container{
         margin-top: 120px;
     }
 
@@ -124,7 +149,7 @@
     }
 
     .product-item {
-        width: 150px;
+        width: 100%;
         margin-left: 0;
     }
 
@@ -133,8 +158,8 @@
     }
 
     .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-image.main-page img {
-        width: 150px;
-        height: 175px;
+        width: 100%;
+        height: 200px;
     }
 
     .product-page-data-block {
@@ -190,7 +215,7 @@
     }
 
     .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-item.main-page{
-        width: auto;
+        width: 90%;
     }
 
     .product-page-data-block .product-item .name-heart{
@@ -203,5 +228,9 @@
 
     .tab-menu-block{
         margin-top: 30px;
+    }
+
+    .recently-viewed-container h2{
+        font-size: 13px
     }
 }
