--- a/client/src/components/atomic/templates/Slider/Slider.css
+++ b/client/src/components/atomic/templates/Slider/Slider.css
@@ -85,6 +85,22 @@
     height: 100%;
     object-fit: cover;
   }
+
+  .swiper-button-prev, .swiper-button-next{
+    color: black;
+  }
+
+  .slider-container {
+    overflow: hidden; /* Убедитесь, что нет ограничения для скролла */
+    touch-action: none; /* Убираем поведение свайпа */
+  }
+  
+  .slide-block img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+  
   
 @media (max-width:768px) {
   .slider-container {
