--- a/client/src/components/pages/cartPage/Cart.css
+++ b/client/src/components/pages/cartPage/Cart.css
@@ -48,6 +48,11 @@
 
 @media (max-width:768px) {
 
+
+    .cart-title{
+        font-size: 15px;
+    }
+
     .cart-product-description{
         font-size: 12px;
         width: 90%;
@@ -62,7 +67,6 @@
         display: flex;
         flex-direction: column;
         
-        padding: 20px;
     }
     .cart-bottom-buttons{
         display: block;
@@ -73,6 +77,7 @@
         font-size: 15px;
         padding: 7px;
         border: 2px solid;
+        height: 45px;
     }
     .cart-bottom-buttons a .cart-button{
         margin-left: 0;
@@ -80,5 +85,6 @@
         margin-top: 9px;
         font-size: 15px;
         padding: 7px;
+        height: 45px;
     }
 }
