--- a/client/src/components/atomic/molecules/SearchBar/SearchBar.css
+++ b/client/src/components/atomic/molecules/SearchBar/SearchBar.css
@@ -19,11 +19,24 @@
   border-radius: 0;
 }
 
+.search-button-comp{
+  font-size: 12px;
+  width: 100%;
+  height: 30px;
+  background-color: white;
+  color: #000000;
+  border: 0;
+  cursor: pointer;
+}
+
 .search-input {
   -webkit-appearance: none;
   appearance: none;
 }
 
+.search-button-mobile{
+  display: none;
+}
 
 .search-results {
   position: absolute;
@@ -92,6 +105,19 @@
 }
 
 @media (max-width:768px) {
+  .search-button-comp{
+    display: none;
+  }
+  .search-button-mobile{
+    display: block;
+    width: 100%;
+    margin-top: 33px;
+    height: 45px;
+    background-color: white;
+    color: #000000;
+    border: 1px solid;
+    font-size: 12px;
+  }
   .search-results{
     width: auto;
     left: -30px;
