--- a/client/src/components/atomic/templates/Slider/Slider.css
+++ b/client/src/components/atomic/templates/Slider/Slider.css
@@ -91,8 +91,8 @@
   }
 
   .slider-container {
-    overflow: hidden; 
-    touch-action: none; 
+    overflow: hidden; /* Убедитесь, что нет ограничения для скролла */
+    touch-action: none; /* Убираем поведение свайпа */
   }
   
   .slide-block img {
