--- a/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
+++ b/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
@@ -3,6 +3,13 @@
 
 }
 
+.register-order-block .category-title{
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 60px;
+    margin-top: 40px;
+}
+
 .register-order-block-container {
     width: 90%;
     margin: 0 auto;
