--- a/client/src/components/atomic/templates/UserProfile/UserProfile.css
+++ b/client/src/components/atomic/templates/UserProfile/UserProfile.css
@@ -9,6 +9,13 @@
     height: 48px;
 }
 
+.profile-tabs .category-title{
+    width: 95%;
+    margin: 0 auto;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
 .profile-tabs-container {
     display: flex;
     width: 90%;
