--- a/client/src/components/atomic/organisms/productItem/ProductItem.css
+++ b/client/src/components/atomic/organisms/productItem/ProductItem.css
@@ -136,6 +136,7 @@
 
     .product-page-container .product-page-data-block .heart-container{
         left: auto;
+        top: 50px;
     }
 
     .product-page-container{
