--- a/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
+++ b/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
@@ -8,6 +8,7 @@
     margin: 0 auto;
     margin-bottom: 60px;
     margin-top: 40px;
+    font-size: 21px;
 }
 
 .register-order-block-container {
@@ -97,6 +98,11 @@
 }
 
 @media (max-width:768px) {
+    .register-order-block .category-title {
+        font-size: 14px;
+        margin-bottom: 21px;
+        margin-top: 16px;
+    }
     .register-order-products-block {
         display: none;
     }
