--- a/client/src/components/atomic/templates/productList/productList.css
+++ b/client/src/components/atomic/templates/productList/productList.css
@@ -38,7 +38,6 @@ a {
 }
 
 
-
 .catalog-container {
     width: 95%;
     margin: 0 auto;
@@ -95,6 +94,12 @@ font-family: 'Helvetica Neue Cyr Ultra Light';
 }
 
 @media (max-width:768px) {
+
+    .category-title, .category-title a {
+        font-size: 14px;
+        margin-bottom: 21px;
+        margin-top: 16px;
+    }
     .catalog-container {
         width: 86%;
         margin-top: 100px;
