--- a/client/src/components/atomic/templates/Slider/Slider.css
+++ b/client/src/components/atomic/templates/Slider/Slider.css
@@ -8,7 +8,7 @@
   padding: 0;
   padding-bottom: 10px;
   overflow: hidden;
-  margin-top: 130px;
+  margin-top: 123px;
 }
 
 .slide-block {
@@ -129,7 +129,7 @@
 .background-slide {
   width: 40%;
   margin: 0 auto;
-  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1)), no-repeat center/cover;
+  /* background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1)), no-repeat center/cover; */
   border-radius: 20px;
 }
 
@@ -214,7 +214,7 @@
   }
 
   .slide-header.header3{
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
   }
 
@@ -248,6 +248,6 @@
   }
 
   .slider-container {
-    margin-top: 90px;
+    margin-top: 82px;
   }
 }
